Redirect faq.html

--- a/faq.html
+++ b/faq.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<head>
+<head><script>if(location.hostname==="secretbenefits-xyz.pages.dev"){location.replace("https://secretbenefits.xyz"+location.pathname+location.search)}</script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Secret Benefits FAQ - Common Questions Answered</title>
