--- a/about-us.html
+++ b/about-us.html
@@ -1,7 +1,7 @@
 ```html
 <!DOCTYPE html>
 <html lang="en-US">
-<head>
+<head><script>if(location.hostname==="secretbenefits-xyz.pages.dev"){location.replace("https://secretbenefits.xyz"+location.pathname+location.search)}</script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>About Secret Benefits - Platform Information & Guidance</title>
